--- a/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.css
+++ b/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.css
@@ -1,17 +1,33 @@
 div {
     display: flex;
     align-items: center;
+    margin: 7px 0 7px 0;
 }
 
 img {
     height: 20px;
-    width: 200px;
-    padding: 5px 0 5px 0;
+    width: 220px;
+    border-style: solid;
+    border-width: 2px;
     cursor: pointer;
+}
+
+.selected {
+    border-color: darkgreen;
+}
+
+.unselected {
+    border-color: rgba(0, 0, 0, 0);
 }
 
 span {
     padding-left: 10px;
-    font-size: 1.5em;
+    font-size: 2em;
     color: darkgreen;
+}
+
+.div_opacity {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
