--- a/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.html
+++ b/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.html
@@ -1,24 +1,26 @@
 Categorical
-<div *ngFor="let s of categoricalSchemes">
-    <img [src]="imagesDir + s + '.png'" [class]="s == colorOptions.scheme ? 'selected' : 'unselected'"
-         [title]="s" (click)="selectCategoricalScheme(s)">
-    <span *ngIf="s == colorOptions.scheme">✔</span>
-</div>
-<br>
-Sequential
-<div *ngFor="let s of sequentialSchemes">
-    <img [src]="imagesDir + s + '.png'" [class]="s == colorOptions.scheme ? 'selected' : 'unselected'"
-         [title]="s" (click)="selectSequentialScheme(s)">
-    <span *ngIf="s == colorOptions.scheme">✔</span>
-</div>
-<br>
-<div class="div_opacity">
-    Background Color Opacity
-    <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.bgColorOpacity" (ngModelChange)="changeColorProvider()">
-    </mat-slider>
-</div>
-<div class="div_opacity">
-    Border Color Opacity
-    <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.borderColorOpacity" (ngModelChange)="changeColorProvider()">
-    </mat-slider>
-</div>
+<ng-container *ngIf="colorOptions">
+    <div *ngFor="let s of categoricalSchemes">
+        <img [src]="imagesDir + s + '.png'" [class]="s == colorOptions.scheme ? 'selected' : 'unselected'"
+             [title]="s" (click)="selectCategoricalScheme(s)">
+        <span *ngIf="s == colorOptions.scheme">✔</span>
+    </div>
+    <br>
+    Sequential
+    <div *ngFor="let s of sequentialSchemes">
+        <img [src]="imagesDir + s + '.png'" [class]="s == colorOptions.scheme ? 'selected' : 'unselected'"
+             [title]="s" (click)="selectSequentialScheme(s)">
+        <span *ngIf="s == colorOptions.scheme">✔</span>
+    </div>
+    <br>
+    <div class="div_opacity">
+        Background Color Opacity
+        <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.bgColorOpacity" (ngModelChange)="changeColorProvider()">
+        </mat-slider>
+    </div>
+    <div class="div_opacity">
+        Border Color Opacity
+        <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.borderColorOpacity" (ngModelChange)="changeColorProvider()">
+        </mat-slider>
+    </div>
+</ng-container>
