--- a/src/app/chart/chart-side-bar/chart-side-bar.component.html
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.html
@@ -24,10 +24,7 @@
 <div style="padding: 0 5px 0 5px;">
    <mat-accordion *ngIf="context" [multi]="multiExpandable">
 
-      <mat-expansion-panel expanded="true">
-         <mat-expansion-panel-header>
-            <h4>{{ dataPanelName() }}</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel [title]="dataPanelName()" [expanded]="true">
          <div>
             <button class="but_column" mat-raised-button *ngFor="let column of selectableDataColumns"
                     [color]="context.dataColumns.includes(column) ? 'accent' : ''" (click)="onColumnChanged(column)">
@@ -50,13 +47,9 @@
             <mat-checkbox *ngIf="!context.isCircularChart()" class="example-margin" [(ngModel)]="context.stacked"> Stacked
             </mat-checkbox>
          </div>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel *ngIf="context.isCircularChart() && !context.isAggregationCountSelected()">
-         <mat-expansion-panel-header>
-            <h4>Names</h4>
-         </mat-expansion-panel-header>
-
+      <koia-expansion-panel title="Names" *ngIf="context.isCircularChart() && !context.isAggregationCountSelected()">
          <mat-form-field>
             <mat-select placeholder="Name Column" [value]="getSingleGroupByColumn()">
                <mat-select-trigger>
@@ -71,13 +64,9 @@
                </mat-option>
             </mat-select>
          </mat-form-field>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel *ngIf="!context.isCategoryChart()">
-         <mat-expansion-panel-header>
-            <h4>Value Splitting</h4>
-         </mat-expansion-panel-header>
-
+      <koia-expansion-panel title="Value Splitting" *ngIf="!context.isCategoryChart()">
          <div div_column_swap_list>
             <span class="span_left_to_right">
                <label>Selected Columns</label>
@@ -106,14 +95,11 @@
                </div>
             </div>
          </div>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel
-                           *ngIf="!context.isCircularChart() && !(context.isCategoryChart() && context.isAggregationCountSelected())">
-         <mat-expansion-panel-header>
-            <h4>{{ groupingPanelName() }}</h4>
-         </mat-expansion-panel-header>
-
+      <koia-expansion-panel
+                            *ngIf="!context.isCircularChart() && !(context.isCategoryChart() && context.isAggregationCountSelected())"
+                            [title]="groupingPanelName()">
          <mat-form-field>
             <mat-select [placeholder]="context.isCategoryChart() ? 'Column Name' : 'Group by'"
                         [value]="getSingleGroupByColumn()">
@@ -136,19 +122,13 @@
                            (click)="context.fireStructureChanged()">{{ timeUnit }}</mat-option>
             </mat-select>
          </mat-form-field>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Color Scheme</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel title="Color Scheme">
          <koia-color-scheme-selection [context]="context"></koia-color-scheme-selection>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Position {{ gridColumns ? ' & Size' : '' }}</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel [title]="'Position ' + (gridColumns ? ' & Size' : '')">
          <mat-form-field class="field_small_integer" *ngIf="gridColumns">
             <mat-select placeholder="Columns" [value]="context.gridColumnSpan">
                <mat-option *ngFor="let span of gridColumnSpans" [value]="span" (click)="context.gridColumnSpan = span">
@@ -171,12 +151,9 @@
                </mat-option>
             </mat-select>
          </mat-form-field>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Labels & Legend</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel title="Labels & Legend">
          <mat-slide-toggle *ngIf="isCircularChart()" [(ngModel)]="context.valueAsPercent">Percent Value Labels
          </mat-slide-toggle>
          <div *ngIf="!isCircularChart()" class="div_label_rotation">
@@ -196,6 +173,6 @@
                   position }}</button>
             </mat-menu>
          </span>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
    </mat-accordion>
 </div>
