--- a/src/app/graph/graph-side-bar/graph-side-bar.component.html
+++ b/src/app/graph/graph-side-bar/graph-side-bar.component.html
@@ -16,10 +16,7 @@
 <div style="padding: 0 5px 0 5px;">
    <mat-accordion *ngIf="context" [multi]="multiExpandable">
 
-      <mat-expansion-panel [expanded]="true">
-         <mat-expansion-panel-header>
-            <h4>Data Hierarchy</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel title="Data Hierarchy" [expanded]="true">
          <div div_column_swap_list>
             <span class="span_left_to_right">
                <label>Selected Columns</label>
@@ -57,19 +54,13 @@
                </div>
             </div>
          </div>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Color Scheme</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel title="Color Scheme">
          <koia-color-scheme-selection [context]="context"></koia-color-scheme-selection>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Position {{ gridColumns ? ' & Size' : '' }}</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel [title]="'Position ' + (gridColumns ? ' & Size' : '')">
          <mat-form-field class="field_small_integer" *ngIf="gridColumns">
             <mat-select placeholder="Columns" [value]="context.gridColumnSpan">
                <mat-option *ngFor="let span of gridColumnSpans" [value]="span" (click)="context.gridColumnSpan = span">
@@ -92,12 +83,9 @@
                </mat-option>
             </mat-select>
          </mat-form-field>
-      </mat-expansion-panel>
+      </koia-expansion-panel>
 
-      <mat-expansion-panel>
-         <mat-expansion-panel-header>
-            <h4>Other</h4>
-         </mat-expansion-panel-header>
+      <koia-expansion-panel title="Other">
          <div class="div_label_rotation">
             Link Distance
             <mat-slider min="0" max="100" step="1" [(ngModel)]="context.linkDist"></mat-slider>
@@ -128,6 +116,6 @@
          <mat-slider min="0" max="1" step="0.1" [(ngModel)]="context.alpha"></mat-slider>
       </div-->
 
-      </mat-expansion-panel>
+      </koia-expansion-panel>
    </mat-accordion>
 </div>
