--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -20,13 +20,15 @@
 }
 
 .but_config {
-  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
-  opacity: 0.2;  
+  z-index: 1;
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
+  opacity: 0.2;
 }
 
 .but_config_active {
-  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
-  opacity: 1;  
+  z-index: 1;
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
+  opacity: 1;
 }
 
 .div_title {
@@ -39,6 +41,7 @@
   text-align: center;
   font-weight: bold;
   resize: none;
+  overflow-y: hidden;
 }
 
 .textarea_title:focus {
@@ -46,16 +49,18 @@
 }
 
 .mat_icon_warning {
-  color: #ff7300;  
+  color: #ff7300;
 }
 
 .but_warning {
-  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
+  z-index: 1;
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
 }
 
 .but_close {
-  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
-  opacity: 0.2;  
+  z-index: 1;
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
+  opacity: 0.2;
 }
 
 button:hover {
